<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/shr_search"
        android:title="@string/shr_search_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/shr_filter"
        android:title="@string/shr_filter_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_newnote"
        android:title="@string/menu_newnote"
        />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        />
    <item
        android:id="@+id/login"
        android:title="@string/login"
        />
</menu>
